# quipe-npm

./: LICENSE  README.md  package.json  shared_dependencies.md
contracts/: IdentityContract.sol
docs/: GettingStarted.md  IdentitySDK.md  KeyPair.md
near_protocol_smart_contract/contracts/session_management/: Cargo.toml
near_protocol_smart_contract/contracts/session_management/src/: lib.rs  model.rs  session.rs  utils.rs
near_protocol_smart_contract/contracts/session_management/tests/: unit.rs
src/: identity.js  index.js  key_pair.js
tests/: identity.test.js  key_pair.test.js
